--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
   <!-- You can change the theme colors from here -->
   <link id="theme" rel="stylesheet">
 
+  <!-- Login Google -->
+  <meta name="google-signin-client_id" content="533854617778-tvmos89083bbmj84dl5hb0dps3nscbs3.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js"></script>
 
 </head>
 
